--- a/css/screen.css
+++ b/css/screen.css
@@ -19,7 +19,7 @@
         margin-left: 28%;
     }
     .contact {
-        height: 55vh;
+        height: auto;
     }
 }
 
@@ -33,7 +33,7 @@
         margin-left: 28%;
     }
     .contact {
-        height: 65vh;
+        height: auto;
     }
 }
 
@@ -47,7 +47,7 @@
         margin-left: 37%;
     }
     .contact {
-        height: 100vh;
+        height: auto;
     }
 }
 
@@ -61,7 +61,7 @@
         margin-left: 36%;
     }
     .contact {
-        height: 100vh;
+        height: auto;
     }
 }
 
@@ -78,12 +78,15 @@
         margin-left: 26%;
     }
     .contact {
-        height: 100vh;
+        height: auto;
+        padding: 20px;
+        background: #08456b;
     }
     .social {
         font-size: 2.5rem;
         margin-top: 30px;
     }
+    
 }
 
 @media only screen and (max-width: 320px) {
@@ -96,7 +99,7 @@
         margin-left: 25%;
     }
     .contact {
-        height: 220vh;
+        height: auto;
     }
     .social {
         font-size: 1.7rem;
