--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,9 @@ ul li {
 .contact {
     background-image: url(../img/contact.jpg);
     background-size: 110% 100%;
-    height: 91vh;
+    height: auto;
+    padding: 20px;
+    overflow: hidden;
 }
 
 .contact-text {
@@ -193,7 +195,8 @@ ul li {
 }
 
 .label {
-    padding-left: 15px;
+    padding-left: 10px;
+    color: #414141;
 }
 
 #my-textarea {
@@ -220,6 +223,7 @@ ul li {
     border: 1px solid rgb(148, 148, 148);
     color: rgb(77, 77, 77)!important;
     text-align: right;
+    margin-top: 10px;
 }
 
 .form-btn:hover {
